ecosia_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecosia-app-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: local.ecosia.org
    http:
      paths:
        - path: /tree
          pathType: Prefix
          backend:
            service:
              name: node-app-lb
              port:
                number: 3000
